[gd_scene load_steps=29 format=2]

[ext_resource path="res://Scenes/Objects/World/Checkpoint.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Objects/World/End.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Themes/Main.tres" type="Theme" id=4]
[ext_resource path="res://Assets/Fonts/small_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scenes/Camera.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Worlds/Tuto1.gd" type="Script" id=7]
[ext_resource path="res://Assets/Sprites/backgrounds/World1/background_sky.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Tips.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Objects/ControlsUI.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Tilesets/terrain_.tres" type="TileSet" id=11]
[ext_resource path="res://Assets/Tilesets/background_.tres" type="TileSet" id=12]
[ext_resource path="res://Assets/Sprites/backgrounds/World1/background_ground.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/UI/tutorial-Sheet.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/grid_sprite.png" type="Texture" id=15]
[ext_resource path="res://Scenes/Objects/TutorialText.tscn" type="PackedScene" id=16]
[ext_resource path="res://Assets/Tilesets/spikes.tres" type="TileSet" id=17]
[ext_resource path="res://Assets/Tilesets/anti_control.tres" type="TileSet" id=18]
[ext_resource path="res://Assets/Tilesets/overlay_.tres" type="TileSet" id=19]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 2

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 200, 160, 0, 0, 0, 0, 304, 160, -16.347, 0, 0, 0, 336, 144, 0, 0, 0, 0, 360, 144, 0, 0, 0, 0, 472, 144, -22.4419, 0, 22.4419, 0, 512, 120, 0, 0, 0, 0, 544, 128, 0, 0, 0, 0, 560, 128, -35.1316, -0.613844, 35.1316, 0.613844, 616, 104, 0, 0, 0, 0, 672, 128, 0, 0, 0, 0, 728, 128, -23.2945, -1.29414, 23.2945, 1.29414, 776, 112, 0, 0, 0, 0, 816, 144, 0, 0, 0, 0, 832, 144, -6.55645, -32.0534, 0, 0, 864, 176, 0, 0, 0, 0, 1088, 176 )
}

[sub_resource type="Curve" id=3]
max_value = 2.0
bake_resolution = 1
_data = [ Vector2( 0.495763, 2 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 0, -40 )
b = Vector2( 0, 56 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 66, 14 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 14 )
region = Rect2( 0, 14, 96, 14 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 64, 40 )

[node name="World" type="Node2D"]
script = ExtResource( 7 )
next_level = "res://Scenes/Worlds/World1_Tuto2.tscn"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Sounds" type="Node" parent="."]

[node name="GridLimits" type="ReferenceRect" parent="."]
margin_right = 1088.0
margin_bottom = 192.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="TextureRect" parent="GridLimits"]
light_mask = 2
material = SubResource( 1 )
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 15 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundLayer" type="ParallaxBackground" parent="."]

[node name="Background0" type="ParallaxLayer" parent="BackgroundLayer"]
motion_scale = Vector2( 0, 0 )

[node name="ColorRect" type="ColorRect" parent="BackgroundLayer/Background0"]
margin_left = -160.0
margin_top = -96.0
margin_right = 160.0
margin_bottom = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="BackgroundLayer/Background0"]
margin_left = -160.0
margin_top = -128.0
margin_right = 160.0
margin_bottom = 128.0
texture = ExtResource( 8 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background1" type="ParallaxLayer" parent="BackgroundLayer"]
motion_scale = Vector2( 0.5, 0.5 )

[node name="Background1" type="TextureRect" parent="BackgroundLayer/Background1"]
margin_left = -96.0
margin_top = -96.0
margin_right = 1184.0
margin_bottom = 160.0
texture = ExtResource( 13 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background2" type="ParallaxLayer" parent="BackgroundLayer"]

[node name="CanvasModulate" type="CanvasModulate" parent="BackgroundLayer"]
color = Color( 0.988235, 0.831373, 0.831373, 1 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="Tips" parent="Path2D" instance=ExtResource( 9 )]
position = Vector2( 274.973, 160 )
offset = 74.97
offsets = [ 87.32, 163.66, 268.2, 365.26, 523.7, 665.53, 872.83, 944.71 ]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 72, -136 )

[node name="Camera" parent="Player" instance=ExtResource( 6 )]

[node name="Tilemaps" type="Node2D" parent="."]

[node name="BackgroundTileMap" type="TileMap" parent="Tilemaps"]
z_index = -1
tile_set = ExtResource( 12 )
cell_size = Vector2( 16, 16 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="AntiControl" type="TileMap" parent="Tilemaps"]
tile_set = ExtResource( 18 )
cell_size = Vector2( 16, 16 )
collision_layer = 16
collision_mask = 0
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="TerrainTileMap" type="TileMap" parent="Tilemaps"]
tile_set = ExtResource( 11 )
cell_size = Vector2( 16, 16 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( -196575, 0, 8, -196574, 0, 11, -196567, 0, 8, -196566, 0, 11, -65538, 0, 8, -65537, 0, 9, -131072, 0, 9, -131071, 0, 9, -131070, 0, 9, -131069, 0, 9, -131068, 0, 9, -131067, 0, 9, -131066, 0, 9, -131065, 0, 9, -131064, 0, 9, -131063, 0, 9, -131062, 0, 9, -131061, 0, 6, -131060, 0, 196610, -131059, 0, 196610, -131058, 0, 196610, -131057, 0, 196610, -131056, 0, 196610, -131055, 0, 196610, -131054, 0, 196610, -131053, 0, 196610, -131052, 0, 196610, -131051, 0, 196610, -131050, 0, 5, -131049, 0, 9, -131048, 0, 9, -131047, 0, 9, -131046, 0, 9, -131045, 0, 9, -131044, 0, 9, -131043, 0, 6, -131042, 0, 196610, -131041, 0, 196610, -131040, 0, 196610, -131039, 0, 65544, -131038, 0, 131083, -131037, 0, 196610, -131036, 0, 196610, -131035, 0, 196610, -131034, 0, 196610, -131033, 0, 196610, -131032, 0, 196610, -131031, 0, 65544, -131030, 0, 65542, -131029, 0, 9, -131028, 0, 9, -131027, 0, 9, -131026, 0, 9, -131025, 0, 9, -131024, 0, 9, -131023, 0, 9, -131022, 0, 9, -131021, 0, 9, -131020, 0, 9, -131019, 0, 9, -131018, 0, 9, -131017, 0, 9, -131016, 0, 9, -131015, 0, 9, -131014, 0, 9, -131013, 0, 9, -131012, 0, 9, -131011, 0, 9, -131010, 0, 9, -131009, 0, 9, -131008, 0, 9, -131007, 0, 9, -131006, 0, 9, -131005, 0, 9, -131004, 0, 9, -131003, 0, 11, -2, 0, 131080, -1, 0, 131082, -65536, 0, 131082, -65535, 0, 131082, -65534, 0, 131082, -65533, 0, 131082, -65532, 0, 131082, -65531, 0, 131082, -65530, 0, 131082, -65529, 0, 131082, -65528, 0, 131082, -65527, 0, 131082, -65526, 0, 131082, -65525, 0, 65547, -65514, 0, 131080, -65513, 0, 131082, -65512, 0, 131082, -65511, 0, 131082, -65510, 0, 131082, -65509, 0, 131082, -65508, 0, 131082, -65507, 0, 65547, -65503, 0, 131080, -65502, 0, 65547, -65495, 0, 131080, -65494, 0, 131082, -65493, 0, 131082, -65492, 0, 131082, -65491, 0, 131082, -65490, 0, 131082, -65489, 0, 131082, -65488, 0, 131082, -65487, 0, 131082, -65486, 0, 131082, -65485, 0, 131082, -65484, 0, 131082, -65483, 0, 131082, -65482, 0, 131082, -65481, 0, 131082, -65480, 0, 131082, -65479, 0, 131082, -65478, 0, 131082, -65477, 0, 131082, -65476, 0, 131082, -65475, 0, 131082, -65474, 0, 131082, -65473, 0, 131082, -65472, 0, 131082, -65471, 0, 131082, -65470, 0, 131082, -65469, 0, 131082, -65468, 0, 131082, -65467, 0, 65547, 65534, 0, 131080, 65535, 0, 131082, 0, 0, 131082, 1, 0, 131082, 2, 0, 131082, 3, 0, 131082, 4, 0, 131082, 5, 0, 131082, 6, 0, 131082, 7, 0, 131082, 8, 0, 131082, 9, 0, 131078, 10, 0, 196618, 11, 0, 131079, 22, 0, 131080, 23, 0, 131082, 24, 0, 131082, 25, 0, 131082, 26, 0, 131082, 27, 0, 131082, 28, 0, 131082, 29, 0, 65547, 33, 0, 131080, 34, 0, 65547, 41, 0, 131080, 42, 0, 131078, 43, 0, 196618, 44, 0, 131077, 45, 0, 131082, 46, 0, 131082, 47, 0, 131082, 48, 0, 131082, 49, 0, 131082, 50, 0, 131082, 51, 0, 131082, 52, 0, 131082, 53, 0, 131082, 54, 0, 131082, 55, 0, 131082, 56, 0, 131082, 57, 0, 131082, 58, 0, 131078, 59, 0, 196618, 60, 0, 131077, 61, 0, 131078, 62, 0, 196618, 63, 0, 131077, 64, 0, 131082, 65, 0, 131082, 66, 0, 131082, 67, 0, 131082, 68, 0, 131082, 69, 0, 65547, 131070, 0, 131080, 131071, 0, 131082, 65536, 0, 131082, 65537, 0, 131082, 65538, 0, 131082, 65539, 0, 131082, 65540, 0, 131082, 65541, 0, 131082, 65542, 0, 131082, 65543, 0, 131082, 65544, 0, 131082, 65545, 0, 65547, 65547, 0, 65536, 65556, 0, 0, 65558, 0, 196616, 65559, 0, 131077, 65560, 0, 131082, 65561, 0, 131082, 65562, 0, 131082, 65563, 0, 131082, 65564, 0, 131082, 65565, 0, 65547, 65569, 0, 131080, 65570, 0, 65547, 65577, 0, 196616, 65578, 0, 196619, 65580, 0, 131080, 65581, 0, 131082, 65582, 0, 131082, 65583, 0, 131078, 65584, 0, 196618, 65585, 0, 131077, 65586, 0, 131082, 65587, 0, 131082, 65588, 0, 131082, 65589, 0, 131078, 65590, 0, 196618, 65591, 0, 131077, 65592, 0, 131078, 65593, 0, 196618, 65594, 0, 131079, 65596, 0, 196616, 65597, 0, 131079, 65599, 0, 131080, 65600, 0, 131082, 65601, 0, 131082, 65602, 0, 131082, 65603, 0, 131082, 65604, 0, 131082, 65605, 0, 65547, 196606, 0, 131080, 196607, 0, 131082, 131072, 0, 131082, 131073, 0, 131082, 131074, 0, 131082, 131075, 0, 131082, 131076, 0, 131082, 131077, 0, 131082, 131078, 0, 131078, 131079, 0, 196618, 131080, 0, 131077, 131081, 0, 65547, 131083, 0, 131072, 131092, 0, 65536, 131095, 0, 196616, 131096, 0, 131077, 131097, 0, 131082, 131098, 0, 131082, 131099, 0, 131082, 131100, 0, 131082, 131101, 0, 65547, 131105, 0, 131080, 131106, 0, 65547, 131116, 0, 131080, 131117, 0, 131078, 131118, 0, 196618, 131119, 0, 131079, 131121, 0, 131080, 131122, 0, 131082, 131123, 0, 131082, 131124, 0, 131082, 131125, 0, 65547, 131127, 0, 196616, 131128, 0, 131079, 131130, 0, 65536, 131133, 0, 131072, 131135, 0, 131076, 131136, 0, 196618, 131137, 0, 131077, 131138, 0, 131082, 131139, 0, 131082, 131140, 0, 131082, 131141, 0, 65547, 262142, 0, 131080, 262143, 0, 131082, 196608, 0, 131082, 196609, 0, 131082, 196610, 0, 131082, 196611, 0, 131082, 196612, 0, 131082, 196613, 0, 131082, 196614, 0, 65547, 196616, 0, 131080, 196617, 0, 65547, 196628, 0, 131072, 196632, 0, 131080, 196633, 0, 131082, 196634, 0, 131082, 196635, 0, 131082, 196636, 0, 131078, 196637, 0, 196619, 196641, 0, 131080, 196642, 0, 65547, 196652, 0, 131080, 196653, 0, 65547, 196655, 0, 131072, 196657, 0, 131080, 196658, 0, 131082, 196659, 0, 131082, 196660, 0, 131078, 196661, 0, 196619, 196664, 0, 131072, 196666, 0, 65536, 196671, 0, 131072, 196673, 0, 196616, 196674, 0, 131077, 196675, 0, 131082, 196676, 0, 131082, 196677, 0, 65547, 327678, 0, 131080, 327679, 0, 131082, 262144, 0, 131082, 262145, 0, 131082, 262146, 0, 131082, 262147, 0, 131082, 262148, 0, 131082, 262149, 0, 131078, 262150, 0, 196619, 262152, 0, 131076, 262153, 0, 196619, 262168, 0, 131080, 262169, 0, 131082, 262170, 0, 131078, 262171, 0, 196618, 262172, 0, 196619, 262177, 0, 196616, 262178, 0, 196619, 262188, 0, 131076, 262189, 0, 196619, 262193, 0, 196616, 262194, 0, 131077, 262195, 0, 131078, 262196, 0, 196619, 262202, 0, 131072, 262210, 0, 131080, 262211, 0, 131082, 262212, 0, 131082, 262213, 0, 65547, 393214, 0, 131080, 393215, 0, 131082, 327680, 0, 131082, 327681, 0, 131082, 327682, 0, 131082, 327683, 0, 131078, 327684, 0, 196618, 327685, 0, 131079, 327688, 0, 131072, 327704, 0, 196616, 327705, 0, 196618, 327706, 0, 196619, 327724, 0, 131072, 327730, 0, 196616, 327731, 0, 196619, 327746, 0, 131080, 327747, 0, 131082, 327748, 0, 131082, 327749, 0, 65547, 458750, 0, 131080, 458751, 0, 131082, 393216, 0, 131082, 393217, 0, 131082, 393218, 0, 131082, 393219, 0, 65547, 393221, 0, 65536, 393282, 0, 196616, 393283, 0, 131077, 393284, 0, 131082, 393285, 0, 65547, 524286, 0, 131080, 524287, 0, 131082, 458752, 0, 131082, 458753, 0, 131082, 458754, 0, 131082, 458755, 0, 65547, 458757, 0, 131072, 458819, 0, 131080, 458820, 0, 131082, 458821, 0, 65547, 589822, 0, 131080, 589823, 0, 131082, 524288, 0, 131082, 524289, 0, 131082, 524290, 0, 131082, 524291, 0, 65547, 524321, 0, 8, 524322, 0, 11, 524329, 4, 65537, 524330, 4, 1, 524331, 0, 8, 524332, 0, 9, 524333, 0, 11, 524355, 0, 131080, 524356, 0, 131082, 524357, 0, 65547, 655358, 0, 131080, 655359, 0, 131082, 589824, 0, 131082, 589825, 0, 131082, 589826, 0, 131082, 589827, 0, 65542, 589828, 0, 11, 589845, 0, 8, 589846, 0, 9, 589847, 0, 9, 589848, 0, 9, 589849, 0, 9, 589850, 0, 9, 589851, 0, 9, 589852, 0, 9, 589853, 0, 11, 589857, 0, 131080, 589858, 0, 65547, 589867, 0, 131080, 589868, 0, 131082, 589869, 0, 65547, 589874, 0, 8, 589875, 0, 11, 589890, 0, 8, 589891, 0, 65541, 589892, 0, 131082, 589893, 0, 65547, 720894, 0, 131080, 720895, 0, 131082, 655360, 0, 131082, 655361, 0, 131082, 655362, 0, 131082, 655363, 0, 131082, 655364, 0, 65542, 655365, 0, 9, 655366, 0, 9, 655367, 0, 9, 655368, 0, 9, 655369, 0, 9, 655370, 0, 9, 655371, 0, 9, 655372, 0, 9, 655373, 0, 9, 655374, 0, 9, 655375, 0, 9, 655376, 0, 9, 655377, 0, 9, 655378, 0, 9, 655379, 0, 9, 655380, 0, 9, 655381, 0, 65541, 655382, 0, 131082, 655383, 0, 131082, 655384, 0, 131082, 655385, 0, 131082, 655386, 0, 131082, 655387, 0, 131082, 655388, 0, 131082, 655389, 0, 65547, 655393, 0, 131080, 655394, 0, 65547, 655398, 0, 8, 655399, 0, 9, 655400, 0, 9, 655401, 0, 9, 655402, 0, 9, 655403, 0, 65541, 655404, 0, 131082, 655405, 0, 65542, 655406, 0, 9, 655407, 0, 9, 655408, 0, 9, 655409, 0, 9, 655410, 0, 65541, 655411, 0, 65542, 655412, 0, 11, 655426, 0, 131080, 655427, 0, 131082, 655428, 0, 131082, 655429, 0, 65547, 786430, 0, 131080, 786431, 0, 131082, 720896, 0, 131082, 720897, 0, 131082, 720898, 0, 131082, 720899, 0, 131082, 720900, 0, 131082, 720901, 0, 131082, 720902, 0, 131082, 720903, 0, 131082, 720904, 0, 131082, 720905, 0, 131082, 720906, 0, 131082, 720907, 0, 131082, 720908, 0, 131082, 720909, 0, 131082, 720910, 0, 131082, 720911, 0, 131082, 720912, 0, 131082, 720913, 0, 131082, 720914, 0, 131082, 720915, 0, 131082, 720916, 0, 131082, 720917, 0, 131082, 720918, 0, 131082, 720919, 0, 131082, 720920, 0, 131082, 720921, 0, 131082, 720922, 0, 131082, 720923, 0, 131082, 720924, 0, 131082, 720925, 0, 65542, 720926, 0, 9, 720927, 0, 9, 720928, 0, 9, 720929, 0, 65541, 720930, 0, 65542, 720931, 0, 9, 720932, 0, 9, 720933, 0, 9, 720934, 0, 65541, 720935, 0, 131082, 720936, 0, 131082, 720937, 0, 131082, 720938, 0, 131082, 720939, 0, 131082, 720940, 0, 131082, 720941, 0, 131082, 720942, 0, 131082, 720943, 0, 131082, 720944, 0, 131082, 720945, 0, 131082, 720946, 0, 131082, 720947, 0, 131082, 720948, 0, 65542, 720949, 0, 9, 720950, 0, 9, 720951, 0, 9, 720952, 0, 11, 720953, 4, 0, 720954, 4, 1, 720955, 0, 196609, 720956, 0, 196611, 720957, 4, 0, 720958, 4, 1, 720959, 0, 8, 720960, 0, 9, 720961, 0, 9, 720962, 0, 65541, 720963, 0, 131082, 720964, 0, 131082, 720965, 0, 65547, 851966, 0, 131080, 851967, 0, 131082, 786432, 0, 131082, 786433, 0, 131082, 786434, 0, 131082, 786435, 0, 131082, 786436, 0, 131082, 786437, 0, 131082, 786438, 0, 131082, 786439, 0, 131082, 786440, 0, 131082, 786441, 0, 131082, 786442, 0, 131082, 786443, 0, 131082, 786444, 0, 131082, 786445, 0, 131082, 786446, 0, 131082, 786447, 0, 131082, 786448, 0, 131082, 786449, 0, 131082, 786450, 0, 131082, 786451, 0, 131082, 786452, 0, 131082, 786453, 0, 131082, 786454, 0, 131082, 786455, 0, 131082, 786456, 0, 131082, 786457, 0, 131082, 786458, 0, 131082, 786459, 0, 131082, 786460, 0, 131082, 786461, 0, 131082, 786462, 0, 131082, 786463, 0, 131082, 786464, 0, 131082, 786465, 0, 131082, 786466, 0, 131082, 786467, 0, 131082, 786468, 0, 131082, 786469, 0, 131082, 786470, 0, 131082, 786471, 0, 131082, 786472, 0, 131082, 786473, 0, 131082, 786474, 0, 131082, 786475, 0, 131082, 786476, 0, 131082, 786477, 0, 131082, 786478, 0, 131082, 786479, 0, 131082, 786480, 0, 131082, 786481, 0, 131082, 786482, 0, 131082, 786483, 0, 131082, 786484, 0, 131082, 786485, 0, 131082, 786486, 0, 131082, 786487, 0, 131082, 786488, 0, 65547, 786495, 0, 131080, 786496, 0, 131082, 786497, 0, 131082, 786498, 0, 131082, 786499, 0, 131082, 786500, 0, 131082, 786501, 0, 65547, 917502, 0, 196616, 917503, 0, 196618, 851968, 0, 196618, 851969, 0, 196618, 851970, 0, 196618, 851971, 0, 196618, 851972, 0, 196618, 851973, 0, 196618, 851974, 0, 196618, 851975, 0, 196618, 851976, 0, 196618, 851977, 0, 196618, 851978, 0, 196618, 851979, 0, 196618, 851980, 0, 196618, 851981, 0, 196618, 851982, 0, 196618, 851983, 0, 196618, 851984, 0, 196618, 851985, 0, 196618, 851986, 0, 196618, 851987, 0, 196618, 851988, 0, 196618, 851989, 0, 196618, 851990, 0, 196618, 851991, 0, 196618, 851992, 0, 196618, 851993, 0, 196618, 851994, 0, 196618, 851995, 0, 196618, 851996, 0, 196618, 851997, 0, 196618, 851998, 0, 196618, 851999, 0, 196618, 852000, 0, 196618, 852001, 0, 196618, 852002, 0, 196618, 852003, 0, 196618, 852004, 0, 196618, 852005, 0, 196618, 852006, 0, 196618, 852007, 0, 196618, 852008, 0, 196618, 852009, 0, 196618, 852010, 0, 196618, 852011, 0, 196618, 852012, 0, 196618, 852013, 0, 196618, 852014, 0, 196618, 852015, 0, 196618, 852016, 0, 196618, 852017, 0, 196618, 852018, 0, 196618, 852019, 0, 196618, 852020, 0, 196618, 852021, 0, 196618, 852022, 0, 196618, 852023, 0, 196618, 852024, 0, 196614, 852025, 0, 196610, 852026, 0, 196610, 852027, 0, 196610, 852028, 0, 196610, 852029, 0, 196610, 852030, 0, 196610, 852031, 0, 196613, 852032, 0, 196618, 852033, 0, 196618, 852034, 0, 196618, 852035, 0, 196618, 852036, 0, 196618, 852037, 0, 196619 )
__meta__ = {
"_edit_lock_": true
}

[node name="OverlayTileMap" type="TileMap" parent="Tilemaps"]
tile_set = ExtResource( 19 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Spikes" type="TileMap" parent="Tilemaps"]
tile_set = ExtResource( 17 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
collision_mask = 2147483648
format = 1
tile_data = PoolIntArray( 589870, 0, 0, 589871, 0, 0, 589872, 0, 0, 589873, 0, 0, 655390, 0, 0, 655391, 0, 0, 655392, 0, 0, 655395, 0, 0, 655396, 0, 0, 655397, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="Tilemaps"]
position = Vector2( 928, 176 )
emitting = false
lifetime = 1.2
one_shot = true
explosiveness = 0.98
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 16, 0 )
direction = Vector2( 0, -1 )
spread = 0.0
initial_velocity = 28.0
initial_velocity_random = 1.0
scale_amount = 2.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 3 )
color = Color( 0.392157, 0.152941, 0.0901961, 1 )

[node name="Objects" type="Node2D" parent="."]

[node name="End" parent="Objects" instance=ExtResource( 3 )]
position = Vector2( 960, 160 )

[node name="Checkpoint" parent="Objects" instance=ExtResource( 1 )]
position = Vector2( 424, 136 )

[node name="Triggers" type="Node" parent="Objects"]

[node name="EndAnimation" type="Area2D" parent="Objects/Triggers"]
position = Vector2( 936, 120 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objects/Triggers/EndAnimation"]
shape = SubResource( 4 )

[node name="ControlsUI" parent="." instance=ExtResource( 10 )]
visible = false

[node name="Tutorials" type="Control" parent="."]
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move" parent="Tutorials" instance=ExtResource( 16 )]
position = Vector2( 136, 128 )
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorials/Move"]
shape = SubResource( 5 )

[node name="Label" type="Label" parent="Tutorials/Move"]
margin_left = -32.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 5 )
text = "to move"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Tutorials/Move"]
position = Vector2( 0, -16 )
texture = SubResource( 6 )

[node name="Jump" parent="Tutorials" instance=ExtResource( 16 )]
position = Vector2( 304, 128 )
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorials/Jump"]
shape = SubResource( 7 )

[node name="Label" type="Label" parent="Tutorials/Jump"]
margin_left = -32.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 5 )
text = "to jump"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="Tutorials/Jump"]
position = Vector2( 0, -16 )
texture = SubResource( 8 )

[node name="HoldJump" parent="Tutorials" instance=ExtResource( 16 )]
position = Vector2( 544, 104 )
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorials/HoldJump"]
position = Vector2( 48, 16 )
shape = SubResource( 9 )

[node name="Label" type="Label" parent="Tutorials/HoldJump"]
margin_left = 24.0
margin_top = -16.0
margin_right = 120.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 5 )
text = "Hold the jump button
to jump higher"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartPoint" type="Position2D" parent="."]
position = Vector2( 120, 144 )
[connection signal="goto_next_offset" from="Path2D/Tips" to="." method="_on_Tips_goto_next_offset"]
[connection signal="reached_offset" from="Path2D/Tips" to="." method="_on_Tips_reached_offset"]
[connection signal="checkpoint" from="Player" to="." method="_on_Player_checkpoint"]
[connection signal="die" from="Player" to="." method="_on_Player_die"]
[connection signal="respawn" from="Player" to="." method="_on_Player_respawn"]
[connection signal="win" from="Player" to="." method="_on_Player_win"]
[connection signal="body_entered" from="Objects/Triggers/EndAnimation" to="." method="_on_EndAnimation_body_entered"]
